[project]
name = "car"
version = "0.1.0"
description = "Robotics_Project"
authors = [
    {name = "Aniruddh"}
]
license = {text = "NA"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pybullet (>=3.2.7,<4.0.0)",
    "numpy (>=1.26,<2.0)",
    "gym (>=0.26.2,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
